--- a/css/layout.css
+++ b/css/layout.css
@@ -1,4 +1,8 @@
 /* CSS LAYOUT */
 /* **************************************************************** */
 
+body{
+    display: flex;
+    justify-content: center;
+}
 
