--- a/css/color.css
+++ b/css/color.css
@@ -1,2 +1,13 @@
 /* CSS COLOR */
 /* **************************************************************** */
+/* VARIABLES */
+:root{
+    --colorBlack: #3A3A3A;
+    --colorOrange: #FFCB13;
+    --colorWhite: #F5F5F5;
+}
+
+footer{
+    background-color: var(--colorBlack);
+    color: var(--colorWhite);
+}
