--- a/css/layout.css
+++ b/css/layout.css
@@ -9,7 +9,8 @@ body{
 /* @HEADER */
 /* BTN */
 .header__telefono{
-    border: 2px solid black;
+    border: 1px solid black;
+    border-radius: 10px;
     padding: 20px 10px;
 }
 
@@ -34,6 +35,8 @@ body{
 }
 
 .input__btn{
+    border-radius: 10px;
+    border: 1px solid black;
     height: 50px;
     width: 150px;
 }
